--- a/app/src/main/res/layout/fragment_area.xml
+++ b/app/src/main/res/layout/fragment_area.xml
@@ -5,30 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="30dp"
     android:padding="20dp"
-    tools:context=".ui.notifications.NotificationsFragment">
+    tools:context=".ui.fragments.AreaFragment">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="INSERTA UNA NUEVA AREA"
+        android:layout_marginBottom="20dp"
+        android:textSize="18dp"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="ID EDIFICIO"
-        android:id="@+id/et_id_edificio"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="PISO"
-        android:id="@+id/et_piso"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="DESCRIPCIÓN"
+        android:hint="DESCRIPCION"
         android:id="@+id/et_descripcion"/>
+
     <EditText
+        android:id="@+id/et_division"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="DIVISION"
-        android:id="@+id/et_division"/>
+        android:hint="@string/division"/>
+
+    <EditText
+        android:id="@+id/et_cantidad_empleados"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="CANTIDAD DE EMPLEADOS"
+        android:inputType="number" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,33 +45,32 @@
         android:id="@+id/btn_insertar"/>
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="39dp"
+        android:layout_height="44dp"
         android:drawSelectorOnTop="true"
-        android:entries="@array/opciones2" />
+        android:entries="@array/opciones"/>
 
     <EditText
         android:id="@+id/et_buscar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/buscar"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:hint="BUSCAR" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BUSCAR"
         android:layout_marginTop="10dp"
-        android:id="@+id/et_btn_buscar"/>
-
+        android:id="@+id/btn_buscar"/>
     <Button
-        android:id="@+id/btn_mostar_todos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MOSTRAR TODOS" />
-
+        android:text="MOSTRAR TODAS LAS AREAS"
+        android:layout_marginTop="10dp"
+        android:id="@+id/btn_mostrar"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
