--- a/app/src/main/res/layout/fragment_sub_deptos.xml
+++ b/app/src/main/res/layout/fragment_sub_deptos.xml
@@ -5,37 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginBottom="30dp"
     android:padding="20dp"
-    tools:context=".ui.dashboard.DashboardFragment">
+    tools:context=".ui.fragments.SubDeptoFragment">
 
-    <TextView
+    <EditText
+        android:id="@+id/et_idArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="INSERTA UNA NUEVA AREA"
-        android:layout_marginBottom="20dp"
-        android:textSize="18dp"
-        android:textAlignment="center"
-        android:textStyle="bold" />
+        android:clickable="false"
+        android:editable="false"
+        android:hint="ID AREA" />
+
+    <EditText
+        android:id="@+id/et_id_edificio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:duplicateParentState="false"
+        android:hint="ID EDIFICIO" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="DESCRIPCION"
-        android:id="@+id/et_descripcion"/>
-
-    <EditText
-        android:id="@+id/et_division"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/division"/>
-
-    <EditText
-        android:id="@+id/et_cantidad_empleados"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CANTIDAD DE EMPLEADOS"
-        android:inputType="number" />
+        android:hint="PISO"
+        android:id="@+id/et_piso"/>
 
     <Button
         android:layout_width="match_parent"
@@ -45,36 +37,44 @@
         android:id="@+id/btn_insertar"/>
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinner2"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="39dp"
         android:drawSelectorOnTop="true"
-        android:entries="@array/opciones"/>
+        android:entries="@array/opciones2" />
 
     <EditText
         android:id="@+id/et_buscar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="BUSCAR" />
+        android:hint="@string/buscar"
+        android:inputType="textPersonName" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BUSCAR"
         android:layout_marginTop="10dp"
-        android:id="@+id/btn_buscar"/>
+        android:id="@+id/et_btn_buscar"/>
+
     <Button
+        android:id="@+id/btn_mostar_todos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MOSTRAR TODAS LAS AREAS"
-        android:layout_marginTop="10dp"
-        android:id="@+id/btn_mostrar"/>
+        android:text="MOSTRAR TODOS" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Subdepartamentos"
+        android:textSize="18sp" />
+
     <ListView
+        android:id="@+id/lv_lista"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/lv_lista"/>
+        android:layout_marginTop="12dp" />
 
 </LinearLayout>
